--- a/package.json
+++ b/package.json
@@ -15,9 +15,20 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
+    "gray-matter": "^4.0.3",
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remark": "^14.0.2",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "autoprefixer": "^10.4.13",
+    "eslint-config-prettier": "^8.6.0",
+    "husky": "^8.0.3",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.3",
+    "tailwindcss": "^3.2.4"
   }
 }
