--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.5",
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "autoprefixer": "^10.4.13",
+    "eslint": "8.32.0",
+    "eslint-config-next": "13.1.5",
     "eslint-config-prettier": "^8.6.0",
     "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4"
