chore: add new editor settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,19 @@
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "prettier.endOfLine": "lf",
-  "terminal.integrated.defaultProfile.windows": "Git Bash"
+  "terminal.integrated.defaultProfile.windows": "Git Bash",
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    "node_modules": true,
+    "**/*.d.ts": true
+  },
+  "explorer.fileNesting.enabled": true,
+  "explorer.fileNesting.patterns": {
+    "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml, tsconfig.json, .husky, postcss.config.js, tailwind.config.js, next.config.js, commitlint.config.js, .prettierrc, .lintstagedrc.js, .eslintrc.json",
+  }
 }
