--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "showdown": "^2.1.0",
+    "showdown-highlight": "^3.1.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
